               ‘fastForward = TRUE’ have been improved. If both
               arguments are combined now only a single data frame with
               all information is returned,

             • support more arguments in the function self-call mode
               (argument ‘file’ is of type ‘list’),

             • function gained the new argument ‘pattern’, which can be
               used to filter imported BIN-files by name.

         • ‘Risoe.BINfileData2RLum.Analysis()’

             • Single grain data had not been converted correctly to
               ‘RLum.Analysis’ objects.  Each grain within a position
               should represent one ‘RLum.Analysis’ object with a set
               of curve. This was so far not the case; corrected,

             • significant performance improvements, especially for big
               Risoe.BINfileData2RLum.Analysis() objects,

             • if the argument ‘pos’ or ‘grain’ contains invalid
               entries the function will not longer return an error.
               The invalid values are discarded and the function tries
               to import values for valid positions or grains only.

  Internals:

         • New internal function ‘.create_UID()’ added to create the
           unique identifier for RLum-objects. The new function reduces
           significantly the overhead while producing the objects.

         • Package 'digits' removed from the dependency list and the
           functionality (creating a unique identifier for
           RLum-objects) was implemented using a self-written function.

         • Package 'rgl' was removed from suggests and replaced by the
           package 'plotly'.

         • Package 'RLumModel' added as suggested package.

         • Package 'RLumShiny' added as suggested package.

         • Package 'rmarkdown' added as suggested package.

         • Package 'pander' added as suggested package.

         • Package 'rstudioapi' added as suggested package.
